[package]
name = "shuttle-seaorm"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
sea-orm = { version = "0.11.3", features = ["runtime-tokio-native-tls"] }
serde = { version = "1.0.163", features = ["derive"] }
shuttle-service = { version = "0.20.0", default-features = false }
